unreleased
  - Added functions:
      - spanLeft'
      - spanRight'
      - leadLeft
      - leadLeft'
      - leadRight
      - leadRight'

0.0.2.0
  - Supports base-4.12
  - Added 'partition' function