@@ -28,12 +28,14 @@ library
   default-language: Haskell2010
   hs-source-dirs: src
   ghc-options: -Wall
+  exposed-modules: Data.List.EitherFunctions
+  build-depends: base, containers
 
-  build-depends:
-      base >=4.9 && <4.13
+  -- require Data.Functor.Contravariant
+  build-depends: base >=4.12
 
-  exposed-modules:
-      Data.List.EitherFunctions
+  -- upper bounds to exclude untested versions
+  build-depends: base <4.13, containers <0.7
 
 test-suite doctest
   default-language: Haskell2010
@@ -41,8 +43,9 @@ test-suite doctest
   main-is: doctest.hs
   ghc-options: -Wall -threaded
   hs-source-dirs: test
+  build-depends: base, doctest, either-list-functions
 
-  build-depends:
-      base >=4.9 && <4.13
-    , doctest
-    , either-list-functions
+  build-depends: base >=4.12
+
+  -- upper bounds to exclude untested versions
+  build-depends: base <4.13
